--- a/src/components/Layout/Image/Image.css
+++ b/src/components/Layout/Image/Image.css
@@ -5,11 +5,12 @@
 }
 
 .centered {
+    font-size: 1.25vw;
     width: 100%;
-    height: 12%;
+    height: 15%;
     background-color: rgba(0, 0, 0, 0.65);
     position: absolute;
-    top: 80%;
+    top: 82%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
