--- a/src/components/Layout/LargeLayout.css
+++ b/src/components/Layout/LargeLayout.css
@@ -1,6 +1,7 @@
 .main-div {
     width: 13%;
     float: left;
+    position: fixed;
 }
 .layout {
     background-color: black;
@@ -21,6 +22,7 @@
 }
 
 .link ~ hr {
+    width: 200%;
     margin: 12px -100%;
     border: 0.5px solid rgba(255, 255, 255, 0.1);
 }
@@ -46,6 +48,7 @@
 }
 
 .fa {
+    margin-bottom: 40px;
     font-size:1.5vw;
     color:grey;
     padding: 0px 4px;
