--- a/src/components/Layout/SmallLayout.css
+++ b/src/components/Layout/SmallLayout.css
@@ -12,11 +12,15 @@ body {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 3.5vw;
+    font-size: 2.75vw;
 }
   
 .topnav a.active {
     color: white;
+}
+
+img {
+    height: 2.25vw;
 }
 
 @media only screen and (max-width: 900px) {
