--- a/src/components/AboutMe.css
+++ b/src/components/AboutMe.css
@@ -30,7 +30,7 @@ h2 {
     font-size: 26px;
 }
 
-p {
+.about-info p {
     font-size: 20px;
     line-height: 200%;
 }
@@ -38,6 +38,16 @@ p {
 .services {
     width: 100%;
     text-align: center;
+}
+
+.services-div {
+    width: 20%;
+    display: inline-block;
+    padding: 0px 1%;
+}
+
+.services-div label {
+    font-size: 32px;
 }
 
 @media only screen and (max-width: 900px) {
