--- a/src/components/AboutMe.css
+++ b/src/components/AboutMe.css
@@ -12,10 +12,12 @@
     min-height: 100vh;
     background-color: #2C3031;
     color: whitesmoke;
+    vertical-align: top;
 }
 
 .about-info {
     display: inline-block;
+    vertical-align: top;
 }
 
 #summary{
@@ -56,7 +58,7 @@ h2 {
 	}
 }
 
-@media only screen and (max-width: 710px) {
+@media only screen and (max-width: 780px) {
 	.about-info {
 		display: block;
 	}
