--- a/src/components/Resume.css
+++ b/src/components/Resume.css
@@ -86,6 +86,18 @@ h2 {
 .ul li {
     padding-right: 10%;
     width: 100%;
+    padding-bottom: 1%;
+}
+
+.ul li .img {
+    float: left;
+    padding-right: 5%;
+    height: 25px;
+    width: auto;
+}
+
+.ul li div {
+    float: left;
 }
 
 .ul li:hover {
