--- a/src/components/AboutMe.css
+++ b/src/components/AboutMe.css
@@ -56,6 +56,10 @@ h2 {
 	.about {
 		width: 100%;
 	}
+    .services-div {
+        display: block;
+        width: 100%;
+    }
 }
 
 @media only screen and (max-width: 780px) {
